🕰🎄 Updated with Glitch

--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 /* CSS files add styling rules to your content */
 
 h1 {
-  color: green;
+  color: black;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #dddddd;
+}
+li {
+  display: inline;
+  
+}
+li a {
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #111;
 }
